syntax = "proto3";

package NAlice;

option go_package = "a.yandex-team.ru/alice/protos/endpoint;endpointpb";
option java_package = "ru.yandex.alice.protos.endpoint";
option java_outer_classname = "CommonProto";

import "mapreduce/yt/interface/protos/extension.proto";

enum EUnit {
    NoUnit = 0;
    PercentUnit = 1;
    TemperatureKelvinUnit = 2;
    TemperatureCelsiusUnit = 3;
    PressureAtmUnit = 4;
    PressurePascalUnit = 5;
    PressureBarUnit = 6;
    PressureMmHgUnit = 7;
    LuxUnit = 8;
    PPBUnit = 9;
    AmpereUnit = 10;
    VoltUnit = 11;
    WattUnit = 12;
}

message TRange {
    double Min = 1 [json_name = "min", (NYT.column_name) = "min"];
    double Max = 2 [json_name = "max", (NYT.column_name) = "max"];
    double Precision = 3 [json_name = "precision", (NYT.column_name) = "precision"];
}

message TPositiveIntegerRange {
    uint64 Min = 1 [json_name = "min", (NYT.column_name) = "min"];
    uint64 Max = 2 [json_name = "max", (NYT.column_name) = "max"];
}
